<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/core_standard_padding"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textViewSignUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sign_up"
                android:textSize="@dimen/core_very_big_text"
                style="@style/MiddleTextBlack"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="@dimen/core_standard_padding"
                android:gravity="center_horizontal"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSignUpTitle"
                android:layout_marginTop="16dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEmail"
                android:layout_marginTop="8dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:layout_marginTop="8dp"
                android:hint="@string/password_confirm_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextConfirmPassword"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up_btn_text" />

            <ProgressBar
                android:id="@+id/progress_circular_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/buttonSignUp"
                android:paddingTop="24dp"/>

        </RelativeLayout>

    </ScrollView>


</FrameLayout>
